[package]
name = "open-share"
version = "0.1.0"
authors = ["Ondřej Hošek <ondra.hosek@gmail.com>"]
edition = "2021"

[dependencies]

[dependencies.windows]
version = "0.58"
features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WNet",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
embed-resource = { version = "3.0" }
